samples/_failures_safe/1761161185_9d0142_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15e1b5a2.c: In function ‘main’:
./samples/SAFE/__tmp_15e1b5a2.c:137: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_15e1b5a2.c:136:5: error: expected declaration or statement at end of input
  136 |     int identity[MAX_ROWS
      |     ^~~
